# chess_engine

./: Cargo.toml
src/: chess.rs  database.rs  engine.rs  game.rs  lib.rs  main.rs  model.rs  neural_net.rs  trainer.rs
src/engine/: ai.rs  tools.rs
